# agentstack-deployment

./: .gitignore  README.md  test_local.py
healthcare_agent/: pyproject.toml
healthcare_agent/agentstack_agents/: healthcare_agent.py
policy_agent/: Dockerfile  pyproject.toml
policy_agent/agentstack_agents/: policy_agent.py
provider_agent/: Dockerfile  pyproject.toml
provider_agent/agentstack_agents/: mcpserver.py  provider_agent.py
research_agent/: pyproject.toml
research_agent/agentstack_agents/: research_agent.py
