[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "provider_agent"
version = "0.1.0"
description = "Provider Agent - find healthcare providers via LangChain + MCP"
requires-python = ">=3.13"
dependencies = [
    "agentstack-sdk>=0.4.3",
    "anthropic>=0.49.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
server = "agentstack_agents.provider_agent:run"

[tool.uv]
package = true

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["agentstack_agents*"]
