[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "research_agent"
version = "0.1.0"
description = "Research Agent - healthcare Q&A using Anthropic"
requires-python = ">=3.12, <3.14"
dependencies = [
    "agentstack-sdk>=0.4.3",
    "anthropic>=0.49.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
server = "agentstack_agents.research_agent:run"

[tool.uv]
package = true

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["agentstack_agents*"]
